--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
 body {
-font-family: Calibri, "Segoe UI", Arial, sans-serif;
+    font-family: Calibri, "Segoe UI", Arial, sans-serif;
 }
+
 h1 {
-text-align: center;
+    text-align: center;
 }
+
 .content {
-margin: 0 auto;
-width: 800px;
-text-align: center;
+    margin: 0 auto;
+    width: 800px;
+    text-align: center;
+}
+
+.clickable {
+    cursor: hand;
 }
