--- a/styles/index.css
+++ b/styles/index.css
@@ -2,11 +2,25 @@ body {
   background-image: url('/images/purplebg.jpg');
   background-repeat: no-repeat;
   background-size: auto;
+  width: 100%;
+  height: 100%;
+}
+
+#logo{
+  filter: drop-shadow(0px 0px 10px #ffffff);
 }
 
 #innerBox {
   background-color: #051726;
   color: white;
+  filter: drop-shadow(4px -2px 5px #000000);
+}
+
+#start{
+  background-color: #fafafa;
+  font-family: "Gugi", sans-serif;
+  color: rgb(0, 0, 0);
+  filter: drop-shadow(2px 0px 5px #81FFD9);
 }
 
 #title{
