--- a/styles/index.css
+++ b/styles/index.css
@@ -28,7 +28,29 @@ body {
     font-family: "Gugi", sans-serif;
 }
 
-#slogan {
+#slogan{
+  color: #fff;
   font-family: "Gugi", sans-serif;
+  overflow: hidden; /* content is hidden */
+  border-right: 0.25em solid white; /* thickness of the cursor */
+  white-space: nowrap; /* keeps everything in one line */
+  margin: 0 auto;
+  letter-spacing: .15em; 
+  animation: 
+    typing 3.5s steps(30, end),
+    blink-caret .5s step-end infinite;
 }
+
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: white; }
+}
+
 
