--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,68 +3,70 @@
 
 <!-- content -->
 <body id="background">
-    <div
-      class="card 
-      position-absolute 
-      top-50 start-50 
-      translate-middle 
-      rounded-5 p-1
-      bg-"
-    >
+  <div class="container position-absolute top-50 start-50 translate-middle">
+    <div class="card rounded-5 p-1" id="outerBox">
       <div class="card text-center p-4 rounded-5" id="innerBox">
-        <img
-          id="logo"
-          class="align-self-center"
-          src="./images/invsona.png"
-          alt="invsona logo"
-          width="200px"
-          height="200px"
-        />
-        <p id="title">Invsona</p>
-        <div class="m-2 pb-5">
-          <p id="slogan">Character Creation at Your Finger Tips</p>
-        </div>
-        </div>
-        <br>
+        <div class="row">
+          <div class="col"></div>
+          <div class="col">
+            <img
+              id="logo"
+              class="align-self-center"
+              src="./images/invsona.png"
+              alt="invsona logo"
+              width="200px"
+              height="200px"
+            />
 
-        <div class="text-start p-4">
-          <form>
-            <div class="mb-3">
-                <label for="name" class="form-label">Name</label>
-                <input type="name" class="form-control" id="name" />
-              </div>
-
-            <div class="mb-3">
-              <label for="loginName" class="form-label">Username / Email</label>
-              <input
-                type="loginName"
-                class="form-control"
-                id="loginName"
-                aria-describedby="emailHelp"
-              />
-              <div id="emailHelp" class="form-text">
-                We'll never share your email with anyone else.
-              </div>
+            <h1 id="title">Invsona</h1>
+            <div class="container m-2 pb-5">
+              <p class="wrap" id="slogan">
+                Character Creation at Your Finger Tips
+              </p>
             </div>
-
-            <div class="mb-3">
-              <label for="password" class="form-label">Password</label>
-              <input type="password" class="form-control" id="password" />
-            </div>
-
-            <div class="p-4 text-center">
-              <button
-                type="button"
-                class="btn btn-primary btn-lg"
-                onclick="window.location.href = '/'"
-              >
-                SIGNUP
-              </button>
-            </div>
-          </form>
+          </div>
+          <div class="col"></div>
         </div>
       </div>
-    </div>
+
+      <div class="text-start p-4">
+        <form>
+          <div class="mb-3">
+              <label for="name" class="form-label">Name</label>
+              <input type="name" class="form-control" id="name" />
+            </div>
+
+          <div class="mb-3">
+            <label for="loginName" class="form-label">Username / Email</label>
+            <input
+              type="loginName"
+              class="form-control"
+              id="loginName"
+              aria-describedby="emailHelp"
+            />
+            <div id="emailHelp" class="form-text">
+              We'll never share your email with anyone else.
+            </div>
+          </div>
+
+          <div class="mb-3">
+            <label for="password" class="form-label">Password</label>
+            <input type="password" class="form-control" id="password" />
+          </div>
+
+          <div class="p-4 text-center">
+            <button
+              type="button"
+              class="btn btn-primary btn-lg"
+              onclick="window.location.href = '/'"
+            >
+              SIGNUP
+            </button>
+          </div>
+        </form>
+      </div> 
+  </div>  
+  </div>
 
 
 <!-- footer -->
