--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,21 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="icon" href="../images/invsona.png" />
+    <title>Invsona</title>
 
     <!-- bootstrap morph theme -->
     <link
       rel="stylesheet"
       href="https://bootswatch.com/5/morph/bootstrap.min.css"
     />
-
-    <!-- google font -->
+    
+    <!-- google icon -->
     <link
-      rel="preconnect"
-      href="https://fonts.gstatic.com"
-      crossorigin
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <link rel="stylesheet" href="./styles/index.css" />
 
-    <title>Invsona</title>
-
-  </head>
+    <!--CSS files-->
+    <%- include('partials/importCSS') %>
