fixed the styles path for index.html and ejs pages

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,7 @@
       rounded-5 p-1
       bg-">
     <div class="card text-center p-4 rounded-5" id="innerBox">
-      <img id="logo" class="align-self-center" src="/Invsona.png" alt="invsona logo" width="200px"
+      <img id="logo" class="align-self-center" src="images/Invsona.png" alt="invsona logo" width="200px"
         height="200px" />
       <p id="title">Invsona</p>
       <div class="m-2 pb-5">
