Convert index.html to index.ejs

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://bootswatch.com/5/morph/bootstrap.min.css"
     />
-    
+
     <!-- google icon -->
     <link
       rel="stylesheet"
@@ -20,4 +20,6 @@
     />
 
     <!--CSS files-->
-    <%- include('partials/importCSS') %>
+    <link rel="stylesheet" href="./styles/index.css" />
+  </head>
+</html>
