Implemented home.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <!-- header -->
-<%- include('partials/header') %>
+<%-include ('./header.ejs')%>
 
 <!-- Purpose: Landing page for Invsona -->
 <body id="background">
@@ -41,7 +41,6 @@
     </div>
   </div>
 
-  
   <!-- footer -->
-  <%- include('partials/footer') %>
+  <%-include ('./footer.ejs')%>
 
