--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,5 +21,7 @@
 
     <!--CSS files-->
     <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="./styles/navbar.css" />
+    <link rel="stylesheet" href="./styles/home.css" />
   </head>
 </html>
