--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,50 +2,9 @@
 <%-include ('./partials/header.ejs')%>
 
 <!-- content -->
-
 <body id="background">
-  <div class="card 
-      position-absolute 
-      top-50 start-50 
-      translate-middle 
-      rounded-5 p-1
-      bg-">
-    <div class="card text-center p-4 rounded-5" id="innerBox">
-      <img id="logo" class="align-self-center" src="images/Invsona.png" alt="invsona logo" width="200px"
-        height="200px" />
-      <p id="title">Invsona</p>
-      <div class="m-2 pb-5">
-        <p id="slogan">Character Creation at Your Finger Tips</p>
-      </div>
-    </div>
-    <br>
-
-    <div class="text-start p-4">
-
-      <!-- login form -->
-      <form action="/loginUser" method="post">
-        <div class="mb-3">
-          <label for="username" class="form-label">Username</label>
-          <input type="username" class="form-control" id="username" name="username" aria-describedby="emailHelp" />
-          <div id="emailHelp" class="form-text">
-            We'll never share your email with anyone else.
-          </div>
-        </div>
-        <div class="mb-3">
-          <label for="password" class="form-label">Password</label>
-          <input type="password" class="form-control" id="password" name="password" />
-        </div>
-
-        <div class="p-4 text-center">
-          <button type="submit" class="btn btn-primary btn-lg">
-            LOGIN
-          </button>
-        </div>
-      </form>
-    </div>
-  </div>
-  </div>
-  <div class="container position-absolute top-50 start-50 translate-middle">
+  <div class="container">
+    <!-- top card -->
     <div class="card rounded-5 p-1" id="outerBox">
       <div class="card text-center p-4 rounded-5" id="innerBox">
         <div class="row">
@@ -71,8 +30,9 @@
         </div>
       </div>
 
+      <!-- form card -->
       <div class="text-start p-4">
-        <form>
+        <form action="/loginUser" method="post">
           <div class="mb-3">
             <label for="loginName" class="form-label">Username / Email</label>
             <input
@@ -94,16 +54,23 @@
             <button
               type="button"
               class="btn btn-primary btn-lg"
-              onclick="window.location.href = '/'"
+              onclick="window.location.href='/login'"
             >
               LOGIN
             </button>
+          </div>
+
+          <!-- SIGN UP -->
+          <div>
+            <p class="text-center">
+              Don't have an account? <a href="/signup">Sign Up</a>
+            </p>
           </div>
         </form>
       </div>
     </div>
   </div>
 
-<!-- footer -->
-<%-include ('./footer.ejs')%>
+  <!-- footer -->
+  <%-include ('./partials/footer.ejs')%>
 
