fix login and signup.ejs scaling issues

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <!-- header -->
-<%-include ('./header.ejs')%>
+<%-include ('./partials/header.ejs')%>
 
 <!-- Purpose: Landing page for Invsona -->
 <body id="background">
@@ -29,7 +29,7 @@
               <button
                 type="button"
                 class="btn btn-primary btn-lg"
-                onclick="window.location.href = '/login'"
+                onclick="window.location.href='/login'"
               >
                 Start
               </button>
@@ -42,5 +42,5 @@
   </div>
 
   <!-- footer -->
-  <%-include ('./footer.ejs')%>
+  <%-include ('./partials/footer.ejs')%>
 
