Implement skeleton ejs and js for persona generator

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -59,3 +59,6 @@
 
   <!-- nav bar and footer -->
   <%-include ('./partials/navbar.ejs')%> <%-include ('./partials/footer.ejs')%>
+  <h1>This is the homepage after login.</h1>
+  <a href="/persona">Persona</a>
+</body>
