--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,25 +1,15 @@
-<!-- header -->
-<%-include ("./partials/header.ejs")%>
-
 <h1>This is the chat.</h1>
 
 <div class="container">
   <% for (var i=0; i<locals.chatPrompt.length; i++) { %>
   <div class="row">
-    <div class="col-12">
-      <%- i + "&nbsp;" + locals.chatPrompt[i] %>
-      <% } %>
-    </div>
+    <%- i + "&nbsp;" + locals.chatPrompt[i] %>
+    <% } %>
   </div>
   <br>
-  <form action="/persona/chat" method="post" class="text-center">
-    <div class="row">
-      <input class="form-control col" type="text" name="message" placeholder="Send a message" />
-      <button class="btn col-3" type="submit">Send</button>
-    </div>
+
+  <form action="/persona/chat" method="post">
+    <input type="text" name="message" placeholder="Send a message" />
+    <button type="submit">Send</button>
   </form>
 </div>
-
-<!-- navbar and footer -->
-<%-include ("./partials/navbar.ejs")%>
-<%-include ("./partials/footer.ejs")%>
