Implement skeleton ejs and js for persona generator

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,5 @@
+<h1>This is the homepage after login.</h1>
+<a href="/persona">Persona</a>
 <!-- navbar -->
 <%-include ("./partials/navbar.ejs")%>
 
