Implement skeleton ejs and js for persona generator

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -37,7 +37,18 @@
     </div>
   </form>
 </div>
+<h1>This is the chat.</h1>
 
-<!-- navbar and footer -->
-<%-include ("./partials/navbar.ejs")%>
-<%-include ("./partials/footer.ejs")%>
+<div class="container">
+  <% for (var i=0; i<locals.chatPrompt.length; i++) { %>
+  <div class="row">
+    <%- i + "&nbsp;" + locals.chatPrompt[i] %>
+    <% } %>
+  </div>
+  <br>
+
+  <form action="/persona/chat" method="post">
+    <input type="text" name="message" placeholder="Send a message" />
+    <button type="submit">Send</button>
+  </form>
+</div>
