Added profile.ejs with elements

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -132,5 +132,4 @@
   </div>
 
   <!-- navbar and footer -->
-  <%-include ("./partials/navbar.ejs")%>
-  <%-include ("./partials/footer.ejs") %>
+  <%-include ("./partials/navbar.ejs")%> <%-include ("./partials/footer.ejs") %>
