--- a/views/accountsetting.ejs
+++ b/views/accountsetting.ejs
@@ -15,25 +15,25 @@
     <!-- Name  -->
     <div class="mb-3">
       <label for="name" class="form-label">Name</label>
-      <input type="name" class="form-control" id="name" />
+      <input type="name" class="form-control" id="name" name="name" />
     </div>
 
     <!-- Username  -->
     <div class="mb-3">
       <label for="username" class="form-label">Username</label>
-      <input type="username" class="form-control" id="username" />
+      <input type="username" class="form-control" id="username" name="username" />
     </div>
 
     <!-- Email  -->
     <div class="mb-3">
       <label for="email" class="form-label">Email address</label>
-      <input type="email" class="form-control" id="email" />
+      <input type="email" class="form-control" id="email" name="email" />
     </div>
 
     <!-- Password  -->
     <div class="mb-3 pb-4">
       <label for="password" class="form-label">Password</label>
-      <input type="password" class="form-control" id="password" />
+      <input type="password" class="form-control" id="password" name="password" />
     </div>
 
     <!-- Save button -->
