--- a/views/login.ejs
+++ b/views/login.ejs
@@ -39,6 +39,7 @@
               type="loginName"
               class="form-control"
               id="loginName"
+              name="loginName"
               aria-describedby="emailHelp"
             />
             <div id="emailHelp" class="form-text">
@@ -47,7 +48,12 @@
           </div>
           <div class="mb-3">
             <label for="password" class="form-label">Password</label>
-            <input type="password" class="form-control" id="password" />
+            <input
+              type="password"
+              class="form-control"
+              id="password"
+              name="password"
+            />
           </div>
 
           <div class="p-4 text-center">
