--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -36,12 +36,17 @@
         <form action="/signup" method="post">
           <div class="mb-3">
             <label for="name" class="form-label">Name</label>
-            <input type="name" class="form-control" id="name" />
+            <input type="name" class="form-control" id="name" name="name" />
           </div>
 
           <div class="mb-3">
             <label for="username" class="form-label">Username</label>
-            <input type="username" class="form-control" id="username" />
+            <input
+              type="username"
+              class="form-control"
+              id="username"
+              name="username"
+            />
           </div>
 
           <div class="mb-3">
@@ -50,6 +55,7 @@
               type="email"
               class="form-control"
               id="email"
+              name="email"
               aria-describedby="emailHelp"
             />
             <div id="emailHelp" class="form-text">
@@ -59,7 +65,12 @@
 
           <div class="mb-3">
             <label for="password" class="form-label">Password</label>
-            <input type="password" class="form-control" id="password" />
+            <input
+              type="password"
+              class="form-control"
+              id="password"
+              name="password"
+            />
           </div>
 
           <div class="p-4 text-center">
@@ -79,4 +90,3 @@
 
   <!-- footer -->
   <%-include ('./partials/footer.ejs')%>
-</body>
