Add routes and modify position of navbar relative to screen and body

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,12 +1,12 @@
 <div
-  class="container text-center position-absolute bottom-0 start-50 translate-middle-x"
+  class="container-fluid text-center fixed-bottom bottom-0 start-50 translate-middle-x"
   id="botnav"
 >
   <div class="row">
     <div class="navbar border-success">
       <!-- save  -->
       <div class="icon col pt-3">
-        <a href="#">
+        <a href="/saved">
           <img
             src="../images/icons/saved.png"
             alt="saved"
@@ -45,7 +45,7 @@
 
       <!-- dialogue -->
       <div class="icon col pt-3">
-        <a href="#">
+        <a href="/dialogue">
           <img
             src="../images/icons/dialogue.png"
             alt="saved"
@@ -58,7 +58,7 @@
 
       <!-- profile -->
       <div class="icon col pt-3">
-        <a href="#" class="">
+        <a href="/profile">
           <img
             src="../images/icons/profile.png"
             alt="saved"
