--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,4 +28,4 @@
     <link rel="stylesheet" href="./styles/home.css" />
     <link rel="stylesheet" href="./styles/profile.css" />
   </head>
-<body style="padding-bottom: 5rem;">
+<body style="padding-bottom: 5rem;"><body style="padding-bottom: 5rem;">
