Modify frontend to match theme

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,5 @@
 <!-- navbar -->
-<%-include ("./partials/navbar.ejs")%>
+<%-include ("./partials/header.ejs")%>
 
 <!-- content -->
 <!-- display picture and name  -->
@@ -16,8 +16,27 @@
     <h1><%name%></h1>
   </div>
 
-  <!-- cards -->
-  <div class="container px-2">
+<!-- cards -->
+
+<div class="container px-2">
+  <div class="row">
+    <% for (var i=1; i<locals.navLinks.length; i++) { %>
+    <div class="col-6">
+      <a href="<%- locals.navLinks[i].link %>">
+        <div class="card">
+          <div class="card-body">
+            <p class="card-title"><%- locals.navLinks[i].upperName %></p>
+            <p class="card-text"><%- locals.navLinks[i].description %></p>
+          </div>
+        </div>
+      </a>
+      <br>
+    </div>
+    <% } %>
+  </div>
+</div>
+
+<!-- <div class="container px-2">
     <div class="row">
       <div class="col-6">
         <div class="card">
@@ -55,7 +74,8 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
-  <!-- nav bar and footer -->
-  <%-include ('./partials/navbar.ejs')%> <%-include ('./partials/footer.ejs')%>
+<!-- nav bar and footer -->
+<%-include ('./partials/navbar.ejs')%>
+<%-include ('./partials/footer.ejs')%>
