Modify frontend to match theme

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -78,6 +78,5 @@
     </div>
   </div> -->
 
-<!-- nav bar and footer -->
-<%-include ('./partials/navbar.ejs')%>
-<%-include ('./partials/footer.ejs')%>
+  <!-- nav bar and footer -->
+  <%-include ('./partials/navbar.ejs')%> <%-include ('./partials/footer.ejs')%>
