--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,6 @@
 <!-- navbar -->
 <%-include ("./partials/header.ejs")%>
+<%-include ("./partials/header.ejs")%>
 
 <!-- content -->
 <!-- display picture and name  -->
@@ -9,6 +10,26 @@
     <img src="../images/cat_placeholder.png" id="userImage" alt="userImage" class="p-2" />
   </div>
   <h1><%- name %></h1>
+</div>
+
+<!-- cards -->
+
+<div class="container px-2">
+  <div class="row">
+    <% for (var i=1; i<locals.navLinks.length; i++) { %>
+    <div class="col-6">
+      <a href="<%- locals.navLinks[i].link %>">
+        <div class="card">
+          <div class="card-body">
+            <p class="card-title"><%- locals.navLinks[i].upperName %></p>
+            <p class="card-text"><%- locals.navLinks[i].description %></p>
+          </div>
+        </div>
+      </a>
+      <br>
+    </div>
+    <% } %>
+  </div>
 </div>
 
 <!-- cards -->
