--- a/views/newPrompt.ejs
+++ b/views/newPrompt.ejs
@@ -1,3 +1,6 @@
+<!-- header -->
+<%-include ("./partials/header.ejs")%>
+
 <h1>This is the new prompt preset page.</h1>
 <!-- header -->
 <%-include ("./partials/header.ejs")%>
@@ -66,19 +69,32 @@
 
 <div class="container">
   <form action="/persona/new-prompt" method="post">
-    <input type="text" name="parameter" placeholder="Add a parameter" />
-    <button type="submit">Add</button>
-  </form>
-  <form action="/persona/chat" method="post">
-    <% for (var i=0; i<locals.savedPromptParameter.length; i++) { %>
     <div class="row">
-      <%- i + "&nbsp;" + locals.savedPromptParameter[i] %>
-      <input type="text" name=<%- locals.savedPromptParameter[i] %> placeholder="Enter <%- locals.savedPromptParameter[i] %>" />
+      <input class="form-control col mx-3" type="text" name="parameter" placeholder="Add a parameter" />
+      <button class="btn col-3 mx-3" type="submit">Add</button>
+    </div>
+  </form>
+  <br>
+
+  <form action="/persona/chat" method="post" class="text-center">
+    <div class="row">
+      <% for (var i=0; i<locals.savedPromptParameter.length; i++) { %>
+      <div class="col-12">
+        <div class="card text-center">
+          <div class="card-body">
+            <label class="card-title"><%- i + "&nbsp;" + locals.savedPromptParameter[i] %></label><br>
+            <input class="form-control" type="text" name="<%- locals.savedPromptParameter[i] %>" placeholder="Enter <%- locals.savedPromptParameter[i] %>" />
+          </div>
+        </div>
+      </div>
       <% } %>
     </div>
     <br>
-    <button type="submit">Send</button>
+    <button class="btn" type="submit">Send</button>
   </form>
 </div>
 <br>
-</div>
+
+<!-- navbar and footer -->
+<%-include ("./partials/navbar.ejs")%>
+<%-include ("./partials/footer.ejs")%>
