--- a/views/home.ejs
+++ b/views/home.ejs
@@ -34,6 +34,27 @@
 </div>
 
 <!-- <div class="container px-2">
+<!-- cards -->
+
+<div class="container px-2">
+  <div class="row">
+    <% for (var i=1; i<locals.navLinks.length; i++) { %>
+    <div class="col-6">
+      <a href="<%- locals.navLinks[i].link %>">
+        <div class="card">
+          <div class="card-body">
+            <p class="card-title"><%- locals.navLinks[i].upperName %></p>
+            <p class="card-text"><%- locals.navLinks[i].description %></p>
+          </div>
+        </div>
+      </a>
+      <br>
+    </div>
+    <% } %>
+  </div>
+</div>
+
+<!-- <div class="container px-2">
     <div class="row">
       <div class="col-6">
         <div class="card">
