--- a/views/generalPrompt.ejs
+++ b/views/generalPrompt.ejs
@@ -1,4 +1,5 @@
-<h1>This is the general prompt page.</h1>
+<!-- header -->
+<%-include ("./partials/header.ejs")%>
 <!-- header -->
 <%-include ("./partials/header.ejs")%>
 
@@ -293,16 +294,57 @@
   </div>
 </div>
 
-<form action="/persona/chat" method="post">
-  <h2>Name</h2>
-  <input type="text" name="name" placeholder="Enter name" />
-  <h2>Age</h2>
-  <input type="text" name="age" placeholder="Enter age" />
-  <h2>Gender</h2>
-  <input type="text" name="gender" placeholder="Enter gender" />
-  <h2>Situation</h2>
-  <input type="text" name="situation" placeholder="Enter the situation your persona is in" />
-    <h2>Plot/Setting</h2>
-  <input type="text" name="plot" placeholder="Enter the plot/setting your persona is in" />
-  <button type="submit">Send</button>
-</form>
+<!-- content -->
+<h1>General prompt page</h1>
+<div class="container">
+  <div class="row">
+    <form action="/persona/chat" method="post" class="text-center">
+      <div class="col-12">
+        <div class="card text-center">
+          <div class="card-body">
+            <label class="card-title">Name</label><br>
+            <input class="form-control" type="text" name="name" placeholder="Enter name" />
+          </div>
+        </div>
+      </div>
+      <div class="col-12">
+        <div class="card text-center">
+          <div class="card-body">
+            <label class="card-title">Age</label><br>
+            <input class="form-control" type="text" name="name" placeholder="Enter age" />
+          </div>
+        </div>
+      </div>
+      <div class="col-12">
+        <div class="card text-center">
+          <div class="card-body">
+            <label class="card-title">Gender</label><br>
+            <input class="form-control" type="text" name="name" placeholder="Enter gender" />
+          </div>
+        </div>
+      </div>
+      <div class="col-12">
+        <div class="card text-center">
+          <div class="card-body">
+            <label class="card-title">Situation</label><br>
+            <input class="form-control" type="text" name="name" placeholder="Enter the situation your persona is in" />
+          </div>
+        </div>
+      </div>
+      <div class="col-12">
+        <div class="card text-center">
+          <div class="card-body">
+            <label class="card-title">Plot/Setting</label><br>
+            <input class="form-control" type="text" name="name" placeholder="Enter the plot/setting your persona is in" />
+          </div>
+        </div>
+      </div>
+      <br><br>
+      <button class="btn" type="submit">Send</button>
+    </form>
+  </div>
+</div>
+
+<!-- navbar and footer -->
+<%-include ("./partials/navbar.ejs")%>
+<%-include ("./partials/footer.ejs")%>
