--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,11 +1,5 @@
 <!-- navbar -->
-<%-include ("./partials/header.ejs")%>
-<<<<<<< HEAD
-<%-include ("./partials/header.ejs")%>
-<%-include ("./partials/header.ejs")%>
-=======
->>>>>>> Fiona_Profile
-<%-include ("./partials/header.ejs")%>
+<%-include ("./partials/navbar.ejs")%>
 
 <!-- content -->
 <!-- display picture and name  -->
@@ -91,6 +85,5 @@
     </div>
   </div> -->
 
-<!-- nav bar and footer -->
-<%-include ('./partials/navbar.ejs')%>
-<%-include ('./partials/footer.ejs')%>
+  <!-- nav bar and footer -->
+  <%-include ('./partials/navbar.ejs')%> <%-include ('./partials/footer.ejs')%>
