Modify frontend to match theme

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,21 +1,15 @@
 <!-- navbar -->
 <%-include ("./partials/header.ejs")%>
+<%-include ("./partials/header.ejs")%>
 
 <!-- content -->
 <!-- display picture and name  -->
-<body>
-  <div class="container text-center align-item-center p-5">
-    <div class="p-2">
-      <img
-        src="../images/cat_placeholder.png"
-        id="userImage"
-        alt="userImage"
-        class="p-2"
-      />
-    </div>
-    <h1><%name%></h1>
+
+<div class="container text-center align-item-center p-5">
+  <div class="p-2">
+    <img src="../images/cat_placeholder.png" id="userImage" alt="userImage" class="p-2" />
   </div>
-  <h1><%- name %></h1>
+  <!-- <h1>%- name %></h1> -->
 </div>
 
 <!-- cards -->
@@ -78,5 +72,6 @@
     </div>
   </div> -->
 
-  <!-- nav bar and footer -->
-  <%-include ('./partials/navbar.ejs')%> <%-include ('./partials/footer.ejs')%>
+<!-- nav bar and footer -->
+<%-include ('./partials/navbar.ejs')%>
+<%-include ('./partials/footer.ejs')%>
