Fix variable name

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
   <div class="p-2">
     <img src="../images/cat_placeholder.png" id="userImage" alt="userImage" class="p-2" />
   </div>
-  <!-- <h1>%- name %></h1> -->
+  <!-- <h1><%- name %></h1> -->
 </div>
 
 <!-- cards -->
