implemented sessions and bcrypt

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -35,11 +35,11 @@
         <form action="/loginUser" method="post">
           <div class="mb-3">
             <label for="loginName" class="form-label" >Username / Email</label>
+            <label for="loginName" class="form-label" >Username / Email</label>
             <input
               type="loginName"
               class="form-control"
               id="loginName"
-              name="loginName"
               name="loginName"
               aria-describedby="emailHelp"
             />
@@ -49,16 +49,12 @@
           </div>
           <div class="mb-3">
             <label for="password" class="form-label">Password</label>
-            <input
-              type="password"
-              class="form-control"
-              id="password"
-              name="password"
-            name="password"/>
+            <input type="password" class="form-control" id="password" name="password"/>
           </div>
 
           <div class="p-4 text-center">
             <button
+              type="submit"
               type="submit"
               class="btn btn-primary btn-lg"
             >
