--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -61,7 +61,7 @@
 
           <div class="mb-3">
             <label for="password" class="form-label">Password</label>
-            <input type="password" class="form-control" id="password" />
+            <input type="password" class="form-control" id="password" name="password" />
           </div>
 
           <div class="p-4 text-center">
