implemented sessions and bcrypt

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -53,6 +53,7 @@
               name="email"
               aria-describedby="emailHelp"
               name="email"
+              name="email"
             />
             <div id="emailHelp" class="form-text">
               We'll never share your email with anyone else.
@@ -61,12 +62,7 @@
 
           <div class="mb-3">
             <label for="password" class="form-label">Password</label>
-            <input
-              type="password"
-              class="form-control"
-              id="password"
-              name="password"
-            />
+            <input type="password" class="form-control" id="password" />
           </div>          
           
           <div class="mb-3">
