--- a/views/login.ejs
+++ b/views/login.ejs
@@ -50,6 +50,12 @@
           <div class="mb-3">
             <label for="password" class="form-label">Password</label>
             <input type="password" class="form-control" id="password" name="password"/>
+            <input
+              type="password"
+              class="form-control"
+              id="password"
+              name="password"
+            name="password"/>
           </div>
 
           <div class="p-4 text-center">
