--- a/views/login.ejs
+++ b/views/login.ejs
@@ -34,11 +34,12 @@
       <div class="text-start p-4">
         <form action="/loginUser" method="post">
           <div class="mb-3">
-            <label for="loginName" class="form-label">Username / Email</label>
+            <label for="loginName" class="form-label" >Username / Email</label>
             <input
               type="loginName"
               class="form-control"
               id="loginName"
+              name="loginName"
               name="loginName"
               aria-describedby="emailHelp"
             />
@@ -53,14 +54,13 @@
               class="form-control"
               id="password"
               name="password"
-            />
+            name="password"/>
           </div>
 
           <div class="p-4 text-center">
             <button
-              type="button"
+              type="submit"
               class="btn btn-primary btn-lg"
-              onclick="window.location.href='/login'"
             >
               LOGIN
             </button>
