implemented sessions and bcrypt

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -35,14 +35,11 @@
         <form action="/loginUser" method="post">
           <div class="mb-3">
             <label for="loginName" class="form-label" >Username / Email</label>
-<<<<<<< HEAD
-            <label for="loginName" class="form-label" >Username / Email</label>
-=======
->>>>>>> Fiona_Profile
             <input
               type="loginName"
               class="form-control"
               id="loginName"
+              name="loginName"
               name="loginName"
               aria-describedby="emailHelp"
             />
@@ -52,22 +49,17 @@
           </div>
           <div class="mb-3">
             <label for="password" class="form-label">Password</label>
-            <input type="password" class="form-control" id="password" name="password"/>
             <input
               type="password"
               class="form-control"
               id="password"
               name="password"
-            name="password"/>
+            />
           </div>
 
           <div class="p-4 text-center">
             <button
-              type="submit"
-<<<<<<< HEAD
-              type="submit"
-=======
->>>>>>> Fiona_Profile
+              type="button"
               class="btn btn-primary btn-lg"
             >
               LOGIN
