--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -37,6 +37,7 @@
           <div class="mb-3">
             <label for="name" class="form-label">Name</label>
             <input type="name" class="form-control" id="name" name="name" />
+            <input type="name" class="form-control" id="name" name="name" />
           </div>
 
           <div class="mb-3">
@@ -61,11 +62,6 @@
               id="email"
               name="email"
               aria-describedby="emailHelp"
-              name="email"
-<<<<<<< HEAD
-              name="email"
-=======
->>>>>>> Fiona_Profile
             />
             <div id="emailHelp" class="form-text">
               We'll never share your email with anyone else.
@@ -74,38 +70,11 @@
 
           <div class="mb-3">
             <label for="password" class="form-label">Password</label>
-<<<<<<< HEAD
-            <input type="password" class="form-control" id="password" />
-=======
             <input
               type="password"
               class="form-control"
               id="password"
               name="password"
-            />
->>>>>>> Fiona_Profile
-          </div>          
-          
-          <div class="mb-3">
-            <label for="securityQuestion" class="form-label">Security Question</label>
-            <input
-              type="text"
-              class="form-control"
-              id="securityQuestion"
-              name="securityQuestion"
-            />
-            <div id="securityQuestionHelp" class="form-text">
-              Remember the answer to your security question in case you forget your password in the future.
-            </div>
-          </div>
-
-          <div class="mb-3">
-            <label for="securityAnswer" class="form-label">Answer</label>
-            <input
-              type="password"
-              class="form-control"
-              id="securityAnswer"
-              name="securityAnswer"
             />
           </div>
 
