--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -57,6 +57,7 @@
               id="email"
               name="email"
               aria-describedby="emailHelp"
+              name="email"
             />
             <div id="emailHelp" class="form-text">
               We'll never share your email with anyone else.
@@ -65,19 +66,13 @@
 
           <div class="mb-3">
             <label for="password" class="form-label">Password</label>
-            <input
-              type="password"
-              class="form-control"
-              id="password"
-              name="password"
-            />
+            <input type="password" class="form-control" id="password" />
           </div>
 
           <div class="p-4 text-center">
             <button
-              type="button"
+              type="submit"
               class="btn btn-primary btn-lg"
-              onclick="window.location.href='/login'"
             >
               SIGNUP
             </button>
