implemented sessions and bcrypt

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -37,6 +37,7 @@
           <div class="mb-3">
             <label for="name" class="form-label">Name</label>
             <input type="name" class="form-control" id="name" name="name" />
+            <input type="name" class="form-control" id="name" name="name" />
           </div>
 
           <div class="mb-3">
@@ -70,36 +71,11 @@
 
           <div class="mb-3">
             <label for="password" class="form-label">Password</label>
-            <input type="password" class="form-control" id="password" />
-          </div>
             <input
               type="password"
               class="form-control"
               id="password"
               name="password"
-            />
-          </div>          
-          
-          <div class="mb-3">
-            <label for="securityQuestion" class="form-label">Security Question</label>
-            <input
-              type="text"
-              class="form-control"
-              id="securityQuestion"
-              name="securityQuestion"
-            />
-            <div id="securityQuestionHelp" class="form-text">
-              Remember the answer to your security question in case you forget your password in the future.
-            </div>
-          </div>
-
-          <div class="mb-3">
-            <label for="securityAnswer" class="form-label">Answer</label>
-            <input
-              type="password"
-              class="form-control"
-              id="securityAnswer"
-              name="securityAnswer"
             />
           </div>
 
