--- a/views/login.ejs
+++ b/views/login.ejs
@@ -49,17 +49,12 @@
           </div>
           <div class="mb-3">
             <label for="password" class="form-label">Password</label>
-            <input
-              type="password"
-              class="form-control"
-              id="password"
-              name="password"
-            />
+            <input type="password" class="form-control" id="password" />
           </div>
 
           <div class="p-4 text-center">
             <button
-              type="button"
+              type="submit"
               class="btn btn-primary btn-lg"
             >
               LOGIN
