--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -37,6 +37,7 @@
           <div class="mb-3">
             <label for="name" class="form-label">Name</label>
             <input type="name" class="form-control" id="name" name="name" />
+            <input type="name" class="form-control" id="name" name="name" />
           </div>
 
           <div class="mb-3">
@@ -61,6 +62,7 @@
               id="email"
               name="email"
               aria-describedby="emailHelp"
+              name="email"
             />
             <div id="emailHelp" class="form-text">
               We'll never share your email with anyone else.
@@ -69,12 +71,7 @@
 
           <div class="mb-3">
             <label for="password" class="form-label">Password</label>
-            <input
-              type="password"
-              class="form-control"
-              id="password"
-              name="password"
-            />
+            <input type="password" class="form-control" id="password" />
           </div>
             <input
               type="password"
