implemented sessions and bcrypt

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -41,12 +41,7 @@
 
           <div class="mb-3">
             <label for="username" class="form-label">Username</label>
-            <input
-              type="username"
-              class="form-control"
-              id="username"
-              name="username"
-            />
+            <input type="username" class="form-control" id="username" name="username"/>
           </div>
 
           <div class="mb-3">
@@ -58,6 +53,7 @@
               name="email"
               aria-describedby="emailHelp"
               name="email"
+              name="email"
             />
             <div id="emailHelp" class="form-text">
               We'll never share your email with anyone else.
@@ -66,35 +62,7 @@
 
           <div class="mb-3">
             <label for="password" class="form-label">Password</label>
-            <input
-              type="password"
-              class="form-control"
-              id="password"
-              name="password"
-            />
-          </div>          
-          
-          <div class="mb-3">
-            <label for="securityQuestion" class="form-label">Security Question</label>
-            <input
-              type="text"
-              class="form-control"
-              id="securityQuestion"
-              name="securityQuestion"
-            />
-            <div id="securityQuestionHelp" class="form-text">
-              Remember the answer to your security question in case you forget your password in the future.
-            </div>
-          </div>
-
-          <div class="mb-3">
-            <label for="securityAnswer" class="form-label">Answer</label>
-            <input
-              type="password"
-              class="form-control"
-              id="securityAnswer"
-              name="securityAnswer"
-            />
+            <input type="password" class="form-control" id="password" />
           </div>
 
           <div class="p-4 text-center">
