--- a/views/login.ejs
+++ b/views/login.ejs
@@ -54,7 +54,7 @@
               class="form-control"
               id="password"
               name="password"
-            />
+            name="password"/>
           </div>
 
           <div class="p-4 text-center">
