--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,8 +28,9 @@
       </a>
       <br>
     </div>
-    <% } %>
+    <h1><%name%></h1>
   </div>
+  <h1><%- name %></h1>
 </div>
 
 <!-- cards -->
