polished home.ejs

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,6 +12,20 @@
   </div>
   <h1><%- name %></h1>
 </div>
+<body>
+  <div class="container text-center align-item-center p-5">
+    <div class="p-2">
+      <img
+        src="../images/cat_placeholder.png"
+        id="userImage"
+        alt="userImage"
+        class="p-2"
+      />
+    </div>
+    <h1><%name%></h1>
+  </div>
+  <h1><%- name %></h1>
+</div>
 
 <!-- cards -->
 
