Enable account detail editing and display

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -18,14 +18,14 @@
         </a>
       </div>
     </div>
-    <h1><%name%></h1>
+    <h1><f%name%></h1>
   </div>
 
   <!-- Menu -->
 
   <div class="container px-4 align-item-center">
     <div class="card p-2">
-      <a href="##">
+      <a href="/profile/account-setting">
         <div class="row">
           <div class="col-2">
             <img
