--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,6 +13,9 @@
       href="https://bootswatch.com/5/morph/bootstrap.min.css"
     />
 
+    <!-- Bootstrap jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
     <!-- google icon -->
     <link
       rel="stylesheet"
