fixed logout page

--- a/views/logout.ejs
+++ b/views/logout.ejs
@@ -36,12 +36,9 @@
           <div class="pb-4">
             <button
               type="submit"
-<<<<<<< HEAD
-              type="submit"
-=======
->>>>>>> Fiona_Profile
               class="btn btn-primary btn-lg"
-                > 
+              onclick="window.location.href='/index'"
+            >
               Home
             </button>
           </div>
