fixed logout page

--- a/views/logout.ejs
+++ b/views/logout.ejs
@@ -36,8 +36,10 @@
           <div class="pb-4">
             <button
               type="submit"
+              type="submit"
               class="btn btn-primary btn-lg"
-                > 
+              a href="/"
+            >
               Home
             </button>
           </div>
