Implement reset password feature

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -57,6 +57,11 @@
             />
           </div>
 
+          <!-- FORGET PASSWORD -->
+          <div id="resetPassword" class="form-text">
+            <a href="/resetPassword">Forgot password</a>
+          </div>
+            
           <div class="p-4 text-center">
             <button
               type="submit"
@@ -72,6 +77,7 @@
               Don't have an account? <a href="/signup">Sign Up</a>
             </p>
           </div>
+          
         </form>
       </div>
     </div>
