--- a/views/resetPassword.ejs
+++ b/views/resetPassword.ejs
@@ -63,7 +63,7 @@
         <form action="/" method="post">
           <input type="hidden" class="form-control" id="email" name="email" aria-describedby="emailHelp" name="email" value="<%= email %>" />
           <div class="mb-3">
-            <label for="password" class="form-label">Password</label>
+            <label for="password" class="form-label">New Password</label>
             <input type="password" class="form-control" id="password" name="password" value="<%= password %>" <% if (disabled) { %>disabled<% } %> />
           </div>
 
