fixed a bug in login route, home and profile pages

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 
 <!-- content -->
 <body id="background">
-  <div class="container">
+  <div class="container"> 
     <!-- top card -->
     <div class="card rounded-5 p-1" id="outerBox">
       <div class="card text-center p-4 rounded-5" id="innerBox">
@@ -40,7 +40,6 @@
               class="form-control"
               id="loginName"
               name="loginName"
-              name="loginName"
               aria-describedby="emailHelp"
             />
             <div id="emailHelp" class="form-text">
@@ -49,8 +48,7 @@
           </div>
           <div class="mb-3">
             <label for="password" class="form-label">Password</label>
-            <input type="password" class="form-control" id="password" />
-          </div>
+            <input type="password" class="form-control" id="password" name="password" /> 
 
           <!-- FORGET PASSWORD -->
           <div id="resetPassword" class="form-text">
