--- a/styles/index.css
+++ b/styles/index.css
@@ -74,4 +74,17 @@ button{
   50% { border-color: white; }
 }
 
+#login{
+  position: absolute;
+  top:0;
+  background: rgba(0, 0, 0, 0.60);
+  color: #f1f1f1;
+  width: 100%;
+  height: 100%;
+  padding: 100px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 
