--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,87 @@
+<!-- Purpose: Login Screen for Invsona -->
+
 <!-- header -->
 <%-include ('./partials/header.ejs')%>
 
 <!-- content -->
-<body id="background">
-  <div class="container"> 
+
+
+<!-- video background -->
+<video autoplay muted loop id="background">
+  <source src="./images/blue_bg.mp4" type="video/mp4" />
+</video>
+
+<!-- logo -->
+<div class="container-fluid text-center align-self-center" id="login">
+  <div id="box">
+    <img id="logo" src="./images/invsona.png" alt="invsona logo" />
+    <h1 id="title">Invsona</h1>
+    <div class="mb-5">
+      <p id="slogan">Character Creation at Your Finger Tips</p>
+    </div>
+    <!-- <button class="btn btn-primary" onclick="window.location.href='/login'">
+      START
+    </button> -->
+
+    <div class="text-start">
+      <form action="/loginUser" method="post">
+        <div class="mb-3">
+          <label for="loginName" class="form-label" >Username / Email</label>
+          <input
+            type="loginName"
+            class="form-control"
+            id="loginName"
+            name="loginName"
+            aria-describedby="emailHelp"
+          />
+          <div id="emailHelp" class="form-text">
+            We'll never share your email with anyone else.
+          </div>
+        </div>
+        <div class="mb-3">
+          <label for="password" class="form-label">Password</label>
+          <input type="password" class="form-control" id="password" name="password" /> 
+
+        <!-- FORGET PASSWORD -->
+        <div id="resetPassword" class="form-text">
+          <a href="/resetPassword">Forgot password</a>
+        </div>
+          
+        <div class="p-4 text-center">
+          <button
+            type="submit"
+            class="btn btn-primary btn"
+          >
+            LOGIN
+          </button>
+        </div>
+
+        <!-- SIGN UP -->
+        <div>
+          <p class="text-center">
+            Don't have an account? <a href="/signup">Sign Up</a>
+          </p>
+        </div>
+        
+      </form>
+    </div>
+  </div>
+
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+  <!-- <div class="container"> 
     <!-- top card -->
-    <div class="card rounded-5 p-1" id="outerBox">
+    <!-- <div class="card rounded-5 p-1" id="outerBox">
       <div class="card text-center p-4 rounded-5" id="innerBox">
         <div class="row">
           <div class="col"></div>
@@ -28,52 +104,10 @@
           </div>
           <div class="col"></div>
         </div>
-      </div>
+      </div> --> 
 
       <!-- form card -->
-      <div class="text-start p-4">
-        <form action="/loginUser" method="post">
-          <div class="mb-3">
-            <label for="loginName" class="form-label" >Username / Email</label>
-            <input
-              type="loginName"
-              class="form-control"
-              id="loginName"
-              name="loginName"
-              aria-describedby="emailHelp"
-            />
-            <div id="emailHelp" class="form-text">
-              We'll never share your email with anyone else.
-            </div>
-          </div>
-          <div class="mb-3">
-            <label for="password" class="form-label">Password</label>
-            <input type="password" class="form-control" id="password" name="password" /> 
-
-          <!-- FORGET PASSWORD -->
-          <div id="resetPassword" class="form-text">
-            <a href="/resetPassword">Forgot password</a>
-          </div>
-            
-          <div class="p-4 text-center">
-            <button
-              type="submit"
-              class="btn btn-primary btn-lg"
-            >
-              LOGIN
-            </button>
-          </div>
-
-          <!-- SIGN UP -->
-          <div>
-            <p class="text-center">
-              Don't have an account? <a href="/signup">Sign Up</a>
-            </p>
-          </div>
-          
-        </form>
-      </div>
-    </div>
+ 
   </div>
 
   <!-- footer -->
