Change theme and style for sign up page

--- a/styles/index.css
+++ b/styles/index.css
@@ -85,6 +85,7 @@ button{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  scroll-behavior: auto;
 }
 
 
